# pygalle.core.base.klass

./: .gitignore  .travis.yml  build-requirements.txt  requirements.build.txt  requirements.doc.txt  requirements.test.txt  settings.yml  setup.cfg  setup.py
.setup/cmds/: __init__.py  apidoc_cmd.py  build.py  coverage_cmd.py  coveralls_cmd.py  lint_cmd.py  readme_cmd.py
.setup/settings/: __init__.py
.tasks/: build.py  config.yml
.templates/: README.md.jinja  badges-declare.md.jinja  credits.md.jinja  issues.md.jinja  synopsis.md.jinja  usage.md.jinja
docs/: conf.py  docs.md  index.md  index.rst  modules.rst  pygalle.core.base.klass.rst  pygalle.core.base.rst  pygalle.core.rst  readme.rst
src/pygalle/core/base/klass/: __init__.py
test/: __init__.py
