[metadata]
description-file = README.md

[pigalle-package]
name = pygalle.core.base.klass
version = 0.1.2
author = SAS 9 Février
copyright = © Copyright 2018, SAS 9 Février
credits = SAS 9 Février
license = MIT
maintainer = SAS 9 Février
email = contact@9fevrier.com
status = Alpha
description = A base class used by the Pygalle framework.
github.username = pygalle-io
github.repository = pygalle.core.base.klass
workInProgress = 1

